	(diredc-hist-change-directory, diredc-hist-up-directory)
	(diredc-hist-duplicate, diredc-hist-find-alternate-file): Perform
	diredc-hist--prune-deleted-directories.
	(diredc-hist-up-directory, diredc-hist-duplicate)
	(diredc-hist-find-alternate-file): Handle case of current
	directory deleted.
	(diredc-hist-up-directory): Improve method of navigating to parent
	directories.

	* diredc.el (diredc-hist--history-list): BUGFIX default value.
	(diredc-hist--hook-function): Property removal should be
	unnecessary.

2020-12-28  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist--prune-deleted-directories): New function.
	(diredc-hist-select, diredc-hist-previous-directory): Use it.
	(diredc-hist-change-directory): Create non-existing directories
	and move point to filename when a non-directory is specified.

2020-12-21  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc): Don't autoload global keybinding (closes
	github issue #6).

2020-12-18  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el: Remove conditional global keybinding for function
	diredc, rename variable dired-allow-duplicate-buffers to
	diredc-allow-duplicate-buffers, update the documentation
	accordingly.

2020-12-17  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (popup-menu*, diredc-browse-mode-map)
	(diredc-trash-info, diredc-shell--launch-eshell)
	(diredc--advice--dired-internal-noselect):  definition changes in
	order to avoid byte-compiler warnings.

2020-12-08  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--create-keymap): Change keybindings of
	bookmark commands to use C-c + prefix

2020-12-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--create-keymap): Change keybinding of
	diredc-show-more-info to C-c ?.
	(diredc-mode-map): Change to defvar to allow user over-ride.

2020-11-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--decode-hexlated-string): Replace algortihm
	with one based upon eww and Eli Zaretskii suggestion.